<resources>
    <string name="app_name">Smart_Home</string>
    <string name="title_home">Home</string>
    <string name="title_relay">Relay</string>
    <string name="title_light">Light</string>
    <string name="title_sensor">Sensor</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="color_picker">Color Picker</string>
    <string name="to_do_list">To Do List</string>
    <string name="type_your_task">type_your_task</string>
    <string name="camera">Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>